--- a/phoneapp/src/main/res/values/strings.xml
+++ b/phoneapp/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
-    <string name="app_name">phoneapp</string>
+    <string name="app_name">PhoneApp</string>
     <string name="hello_msg">Hello to the main page</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="login">Login</string>
+    <string name="challenges">Challenges</string>
+    <string name="header">Header</string>
+    <string name="navigation">Navigation</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="stats">Stats</string>
+    <string name="friends">Friends</string>
+    <string name="settings">Settings</string>
+    <string name="notifications">Notifications</string>
+    <string name="about">About</string>
+    <string name="profile_name">Profile Name</string>
+    <string name="profile_email">Profile email</string>
+    <string name="theme_switch">Switch theme</string>
 </resources>
